--- a/archives.html
+++ b/archives.html
@@ -24,19 +24,12 @@
 </dl>
 </section>
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>links</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="">Google+</a></li>
+                            <li><a href="https://github.com/rodrigohubner">GitHub</a></li>
+                            <li><a href="https://plus.google.com/+rodrigohubner1">Google+</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
