Theme modified and first post added.

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="./theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="../theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="./theme/pygments/monokai.min.css">
-  <link rel="stylesheet" type="text/css" href="./theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="../theme/pygments/monokai.min.css">
+  <link rel="stylesheet" type="text/css" href="../theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -34,25 +34,24 @@
 <meta property="og:title" content="Hack the Brain"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="."/>
+<meta property="og:url" content=".."/>
 <meta property="og:image" content="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400">
 
-  <title>Hack the Brain &ndash;     Tags
-</title>
+  <title>Hack the Brain &ndash; About</title>
 
 </head>
 <body>
   <aside>
     <div>
-      <a href=".">
+      <a href="..">
         <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href=".."></a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
         <ul class="list">
-          <li><a href="./pages/about.html#about">About</a></li>
+          <li><a href="../pages/about.html#about">About</a></li>
 
         </ul>
       </nav>
@@ -70,7 +69,7 @@
   <main>
 
     <nav>
-      <a href=".">    Home
+      <a href="..">    Home
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
@@ -80,15 +79,56 @@
 
 <article class="single">
   <header>
-    <h1>    Tags
-</h1>
+    <h1 id="about">About</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/gsoc.html">GSoC</a> (1)</li>
-          <li><a href="./tag/mne-python.html">MNE-Python</a> (1)</li>
-          <li><a href="./tag/psf.html">PSF</a> (1)</li>
-    </ul>
-  </div>
+<p>I'm a professor at Federal University of Tecnology - Paraná in department of Computer Science.</p>
+<p>In my work with neuroscience, I'm researching how to apply "decision-making" in BCI. For it, I'm using paradigms as Steady State Visual Evoked Potential (SSVEP) and P300. I'm also building simulated methods on computer to make a feedback stimulis and physical simulations using leds and automated robots.</p>
+<p>Below are some timelines about me:</p>
+<h2>Courses timeline:</h2>
+<ul>
+<li>
+<p>Bachelor's degree in Informatics - <img alt="'Date'" src="../images/date-time.png"> 2004 - 2009</p>
+<ul>
+<li>State University of Maringá</li>
+<li>Supervised by Anderson Faustino da Silva</li>
+</ul>
+</li>
+<li>
+<p>Master's degree in Computer Science - <img alt="'Date'" src="../images/date-time.png"> 2010 - 2012</p>
+<ul>
+<li>State University of Maringá</li>
+<li>Area: Parallel Programming and Compilers</li>
+<li>Supervised by Anderson Faustino da Silva</li>
+</ul>
+</li>
+<li>
+<p>Ph.D. in Electrical Engineer (Computer Engineer emphasys) - <img alt="'Date'" src="../images/date-time.png"> 2015 - in progress</p>
+<ul>
+<li>State University of Campinas</li>
+<li>Área: Brain Computer Interface</li>
+<li>Supervised by Gilmar Barreto</li>
+</ul>
+</li>
+</ul>
+<h2>Projects timeline:</h2>
+<ul>
+<li>
+<p>Google Summer of Code:</p>
+</li>
+<li>
+<p><img alt="'Date'" src="../images/date-time.png"> 2011</p>
+<ul>
+<li><a href="A Rich Text Editor for Tryton Client">https://www.google-melange.com/archive/gsoc/2011/orgs/python/projects/rhubner.html</a></li>
+<li>Python Software Foudation (Tryton Project)</li>
+</ul>
+</li>
+<li><img alt="'Date'" src="../images/date-time.png"> 2012<ul>
+<li><a href="A historical time-line for Tryton client">https://www.google-melange.com/archive/gsoc/2012/orgs/python/projects/rhubner.html</a></li>
+<li>Python Software Foudation (Tryton Project)</li>
+</ul>
+</li>
+</ul>  </div>
 </article>
 
     <footer>
@@ -119,7 +159,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Hack the Brain ",
-  "url" : ".",
+  "url" : "..",
   "image": "https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400",
   "description": ""
 }
