--- a/first-post.html
+++ b/first-post.html
@@ -28,11 +28,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <meta name="author" content="Rodrigo Hubner" />
-<meta name="description" content="This year I'm applying to Google Summer of Code (GSoC). I wrote a proposal for the MNE-Python organization that stands on the umbrella of Python Software Foundation (PSF). The MNE-python project has a rich amount of tools needed to work with EEG and MEG data. On the other hand, many …" />
-<meta name="keywords" content="MNE-Python, GSoC, PSF">
+<meta name="description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …" />
+<meta name="keywords" content="BCI">
 <meta property="og:site_name" content="Hack the Brain"/>
-<meta property="og:title" content="Project applied in GSoC"/>
-<meta property="og:description" content="This year I'm applying to Google Summer of Code (GSoC). I wrote a proposal for the MNE-Python organization that stands on the umbrella of Python Software Foundation (PSF). The MNE-python project has a rich amount of tools needed to work with EEG and MEG data. On the other hand, many …"/>
+<meta property="og:title" content="First post"/>
+<meta property="og:description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./first-post.html"/>
 <meta property="og:type" content="article"/>
@@ -40,21 +40,19 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="./author/rodrigo-hubner.html">
 <meta property="article:section" content="misc"/>
-<meta property="article:tag" content="MNE-Python"/>
-<meta property="article:tag" content="GSoC"/>
-<meta property="article:tag" content="PSF"/>
+<meta property="article:tag" content="BCI"/>
 <meta property="og:image" content="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400">
 
-  <title>Hack the Brain &ndash; Project applied in GSoC</title>
+  <title>Hack the Brain &ndash; First post</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href=".">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
+        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href=".">Hack the Brain</a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
@@ -87,7 +85,7 @@
 
 <article class="single">
   <header>
-    <h1 id="first-post">Project applied in GSoC</h1>
+    <h1 id="first-post">First post</h1>
     <p>
           Posted on ter 04 abril 2017 in <a href="./category/misc.html">misc</a>
 
@@ -97,25 +95,12 @@
 
 
   <div>
-    <p>This year I'm applying to <a href="https://summerofcode.withgoogle.com/">Google Summer of Code (GSoC)</a>. I wrote a proposal for the <a href="https://martinos.org/mne/stable/index.html">MNE-Python</a> organization that stands on the umbrella of <a href="https://www.python.org/psf/">Python Software Foundation (PSF)</a>.</p>
-<p>The MNE-python project has a rich amount of tools needed to work with EEG and MEG data. On the other hand, many BCI researchers need to work with the data at the time they are acquired and return feedback to the user. No module in MNE-Python allows that kind of online analysis yet. Thinking about this, I am proposing the idea of developing a module that allows an online analysis, initially to SSVEP-BCI (one of the most used paradigms in BCI research) using OpenBCI board (one of the most used low cost EEG equipment) for data acquisition.</p>
-<p>Following some reasons to develop full support for online experimentation in MNE-Python:</p>
-<ul>
-<li>Developers who like python, like to continue with python. There is a set of tools <a href="https://depositonce.tu-berlin.de/bitstream/11303/4734/2/venthur_bastian.pdf">(Wyrm/Mushu/Pyff)</a> which was developed for this purpose, but this project don't seems active.</li>
-<li><a href="http://openvibe.inria.fr/">OpenVibe</a> and <a href="http://www.schalklab.org/research/bci2000">BCI 2000</a> are complete frameworks that can be used for this type of experimentation, but are written in C++, which makes it difficult for BCI researchers to create new experiments that are not offered by their interface. In addition, BCI 2000 has a non-opensource license;</li>
-<li><a href="https://www.neuropype.io/">NeuroPype (QUSP)</a> would be the perfect alternative for python developers, however it is not opensource as well;</li>
-</ul>
-<p>For these reasons, a real-time module would be essential for BCI researchers in MNE-python, which already has most of the quality cited: opensource, extensibility, flexibility, great amount of tools, very active community, etc.
-My idea is to develop an OpenBCI pipeline acquisition and adapt what MNE-Python already has to work with online BCI paradigms.</p>
-<p>Initially I am studying the development of an online analysis with the SSVEP-BCI paradigm, but at the conclusion of this step, I could think of as a secondary goal the P300 paradigm as well.</p>
-<p>As part of this project, I also want to develop a module that can receive markers for feedback using datagrams. In this way it will be possible to adapt existing feedback environments such as <a href="https://github.com/bbci/pyff">PyFF</a>, scenarios using Python and Lua (OpenVibe) and even handmade scenarios with the Löve library (already built by me).</p>
-<p>The next posts (if I am accepted) will be more focused on the GSoC project and my research in BCI.</p>
+    <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me.</p>
+<p>My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I hope future information is interesting to readers.</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/mne-python.html">MNE-Python</a>
-      <a href="./tag/gsoc.html">GSoC</a>
-      <a href="./tag/psf.html">PSF</a>
+      <a href="./tag/bci.html">BCI</a>
     </p>
   </div>
 
