--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <aside>
     <div>
       <a href=".">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
+        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href=".">Hack the Brain</a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
@@ -81,19 +81,19 @@
 
 <article>
   <header>
-    <h2><a href="./first-post.html#first-post">Project applied in GSoC</a></h2>
+    <h2><a href="./first-post.html#first-post">First post</a></h2>
     <p>
           Posted on ter 04 abril 2017 in <a href="./category/misc.html">misc</a>
 
 
           &#8226;     Tagged with
 
-              <a href="./tag/mne-python.html">MNE-Python</a>,              <a href="./tag/gsoc.html">GSoC</a>,              <a href="./tag/psf.html">PSF</a>
+              <a href="./tag/bci.html">BCI</a>
     </p>
   </header>
   <div>
-      <p>This year I'm applying to <a href="https://summerofcode.withgoogle.com/">Google Summer of Code (GSoC)</a>. I wrote a proposal for the <a href="https://martinos.org/mne/stable/index.html">MNE-Python</a> organization that stands on the umbrella of <a href="https://www.python.org/psf/">Python Software Foundation (PSF)</a>.</p>
-<p>The MNE-python project has a rich amount of tools needed to work with EEG and MEG data. On the other hand, many …</p>
+      <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me.</p>
+<p>My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …</p>
       <br>
       <a class="btn" href="./first-post.html#first-post">    Continue reading
 </a>
