--- a/pages/about.html
+++ b/pages/about.html
@@ -44,9 +44,9 @@
   <aside>
     <div>
       <a href="..">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
+        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
       </a>
-      <h1><a href=".."></a></h1>
+      <h1><a href="..">Hack the Brain</a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
@@ -82,7 +82,7 @@
     <h1 id="about">About</h1>
   </header>
   <div>
-<p>I'm a professor at Federal University of Tecnology - Paraná in department of Computer Science.</p>
+<p>My name is Rodrigo Hübner, and I'm a professor at <a href="http://www.utfpr.edu.br/estrutura-universitaria/pro-reitorias/prorec/diretoria-de-relacoes-interinstitucionais/international-affairs-eng">Federal University of Tecnology</a> - Paraná in department of Computer Science.</p>
 <p>In my work with neuroscience, I'm researching how to apply "decision-making" in BCI. For it, I'm using paradigms as Steady State Visual Evoked Potential (SSVEP) and P300. I'm also building simulated methods on computer to make a feedback stimulis and physical simulations using leds and automated robots.</p>
 <p>Below are some timelines about me:</p>
 <h2>Courses timeline:</h2>
@@ -108,24 +108,6 @@
 <li>State University of Campinas</li>
 <li>Área: Brain Computer Interface</li>
 <li>Supervised by Gilmar Barreto</li>
-</ul>
-</li>
-</ul>
-<h2>Projects timeline:</h2>
-<ul>
-<li>
-<p>Google Summer of Code:</p>
-</li>
-<li>
-<p><img alt="'Date'" src="../images/date-time.png"> 2011</p>
-<ul>
-<li><a href="A Rich Text Editor for Tryton Client">https://www.google-melange.com/archive/gsoc/2011/orgs/python/projects/rhubner.html</a></li>
-<li>Python Software Foudation (Tryton Project)</li>
-</ul>
-</li>
-<li><img alt="'Date'" src="../images/date-time.png"> 2012<ul>
-<li><a href="A historical time-line for Tryton client">https://www.google-melange.com/archive/gsoc/2012/orgs/python/projects/rhubner.html</a></li>
-<li>Python Software Foudation (Tryton Project)</li>
 </ul>
 </li>
 </ul>  </div>
