--- a/categories.html
+++ b/categories.html
@@ -45,9 +45,9 @@
   <aside>
     <div>
       <a href=".">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
+        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href=".">Hack the Brain</a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
