--- a/tags.html
+++ b/tags.html
@@ -45,9 +45,9 @@
   <aside>
     <div>
       <a href=".">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="" title="">
+        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
       </a>
-      <h1><a href="."></a></h1>
+      <h1><a href=".">Hack the Brain</a></h1>
 
 <p>BCI | Programm Languages | Robotics</p>
       <nav>
@@ -84,9 +84,7 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/gsoc.html">GSoC</a> (1)</li>
-          <li><a href="./tag/mne-python.html">MNE-Python</a> (1)</li>
-          <li><a href="./tag/psf.html">PSF</a> (1)</li>
+    <ul class="list">          <li><a href="./tag/bci.html">BCI</a> (1)</li>
     </ul>
   </div>
 </article>
