--- a/first-post.html
+++ b/first-post.html
@@ -41,7 +41,7 @@
 <meta property="article:author" content="./author/rodrigo-hubner.html">
 <meta property="article:section" content="misc"/>
 <meta property="article:tag" content="BCI"/>
-<meta property="og:image" content="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400">
+<meta property="og:image" content="https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=80">
 
   <title>Hack the Brain &ndash; First post</title>
 
@@ -50,11 +50,11 @@
   <aside>
     <div>
       <a href=".">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
+        <img src="https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=80" alt="Hack the Brain" title="Hack the Brain">
       </a>
       <h1><a href=".">Hack the Brain</a></h1>
 
-<p>BCI | Programm Languages | Robotics</p>
+<p>BCI | Program Languages | Robotics</p>
       <nav>
         <ul class="list">
           <li><a href="./pages/about.html#about">About</a></li>
@@ -139,7 +139,7 @@
   "@type" : "Blog",
   "name": " Hack the Brain ",
   "url" : ".",
-  "image": "https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400",
+  "image": "https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=80",
   "description": ""
 }
 </script>
