Interests page added and website errors fixed.

--- a/first-post.html
+++ b/first-post.html
@@ -28,19 +28,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <meta name="author" content="Rodrigo Hubner" />
-<meta name="description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …" />
-<meta name="keywords" content="BCI">
+<meta name="description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who works on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …" />
+<meta name="keywords" content="general">
 <meta property="og:site_name" content="Hack the Brain"/>
 <meta property="og:title" content="First post"/>
-<meta property="og:description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …"/>
+<meta property="og:description" content="In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who works on the same issues as me. My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="./first-post.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-04-04 19:00:00-03:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="./author/rodrigo-hubner.html">
-<meta property="article:section" content="misc"/>
-<meta property="article:tag" content="BCI"/>
+<meta property="article:section" content="Uncategorized"/>
+<meta property="article:tag" content="general"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=140">
 
   <title>Hack the Brain &ndash; First post</title>
@@ -58,6 +58,7 @@
       <nav>
         <ul class="list">
           <li><a href="./pages/about.html#about">About</a></li>
+          <li><a href="./pages/interests.html#interests">Interests</a></li>
 
         </ul>
       </nav>
@@ -79,6 +80,7 @@
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
+      <a href="/pages/interests.html">INTERESTS</a>
 
 
     </nav>
@@ -87,7 +89,7 @@
   <header>
     <h1 id="first-post">First post</h1>
     <p>
-          Posted on ter 04 abril 2017 in <a href="./category/misc.html">misc</a>
+          Posted on ter 04 abril 2017 in <a href="./category/uncategorized.html">Uncategorized</a>
 
 
     </p>
@@ -95,12 +97,12 @@
 
 
   <div>
-    <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me.</p>
-<p>My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I hope future information is interesting to readers.</p>
+    <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who works on the same issues as me.</p>
+<p>My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I hope the future information is interesting to readers.</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="./tag/bci.html">BCI</a>
+      <a href="./tag/general.html">general</a>
     </p>
   </div>
 
