--- a/pages/about.html
+++ b/pages/about.html
@@ -52,6 +52,7 @@
       <nav>
         <ul class="list">
           <li><a href="../pages/about.html#about">About</a></li>
+          <li><a href="../pages/interests.html#interests">Interests</a></li>
 
         </ul>
       </nav>
@@ -73,6 +74,7 @@
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
+      <a href="/pages/interests.html">INTERESTS</a>
 
 
     </nav>
@@ -95,18 +97,18 @@
 </ul>
 </li>
 <li>
-<p>Master's degree in Computer Science - <img alt="'Date'" src="../images/date-time.png"> 2010 - 2012</p>
+<p>Master's degree in Computer Science (Computer Systems area) - <img alt="'Date'" src="../images/date-time.png"> 2010 - 2012</p>
 <ul>
 <li>State University of Maringá</li>
-<li>Area: Parallel Programming and Compilers</li>
+<li>Subarea: Parallel Programming and Compilers</li>
 <li>Supervised by Anderson Faustino da Silva</li>
 </ul>
 </li>
 <li>
-<p>Ph.D. in Electrical Engineer (Computer Engineer emphasys) - <img alt="'Date'" src="../images/date-time.png"> 2015 - in progress</p>
+<p>Ph.D. in Electrical Engineer (Computer Engineer area) - <img alt="'Date'" src="../images/date-time.png"> 2015 - in progress</p>
 <ul>
 <li>State University of Campinas</li>
-<li>Área: Brain Computer Interface</li>
+<li>Subarea: Brain Computer Interface</li>
 <li>Supervised by Gilmar Barreto</li>
 </ul>
 </li>
