--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <nav>
         <ul class="list">
           <li><a href="./pages/about.html#about">About</a></li>
+          <li><a href="./pages/interests.html#interests">Interests</a></li>
 
         </ul>
       </nav>
@@ -73,6 +74,7 @@
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
+      <a href="/pages/interests.html">INTERESTS</a>
 
 
     </nav>
@@ -83,16 +85,16 @@
   <header>
     <h2><a href="./first-post.html#first-post">First post</a></h2>
     <p>
-          Posted on ter 04 abril 2017 in <a href="./category/misc.html">misc</a>
+          Posted on ter 04 abril 2017 in <a href="./category/uncategorized.html">Uncategorized</a>
 
 
           &#8226;     Tagged with
 
-              <a href="./tag/bci.html">BCI</a>
+              <a href="./tag/general.html">general</a>
     </p>
   </header>
   <div>
-      <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who work on the same issues as me.</p>
+      <p>In this blog I will post curiosities about my projects and my researches. I would like to spread this to get new partnerships and help people who works on the same issues as me.</p>
 <p>My main projects are related to the study of Brain-Computer Interface (BCI) and robotics projects. I …</p>
       <br>
       <a class="btn" href="./first-post.html#first-post">    Continue reading
