--- a/pages/interests.html
+++ b/pages/interests.html
@@ -35,24 +35,24 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=".."/>
-<meta property="og:image" content="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400">
+<meta property="og:image" content="https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=140">
 
-  <title>Hack the Brain &ndash;     Tag PSF
-</title>
+  <title>Hack the Brain &ndash; Interests</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="..">
-        <img src="https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400" alt="Hack the Brain" title="Hack the Brain">
+        <img src="https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=140" alt="Hack the Brain" title="Hack the Brain">
       </a>
       <h1><a href="..">Hack the Brain</a></h1>
 
-<p>BCI | Programm Languages | Robotics</p>
+<p>BCI | Program Languages | Robotics</p>
       <nav>
         <ul class="list">
           <li><a href="../pages/about.html#about">About</a></li>
+          <li><a href="../pages/interests.html#interests">Interests</a></li>
 
         </ul>
       </nav>
@@ -74,38 +74,27 @@
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
+      <a href="/pages/interests.html">INTERESTS</a>
 
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="../first-post.html#first-post">Project applied in GSoC</a></h2>
-    <p>
-          Posted on ter 04 abril 2017 in <a href="../category/misc.html">misc</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="../tag/mne-python.html">MNE-Python</a>,              <a href="../tag/gsoc.html">GSoC</a>,              <a href="../tag/psf.html">PSF</a>
-    </p>
+    <h1 id="interests">Interests</h1>
   </header>
   <div>
-      <p>This year I'm applying to <a href="https://summerofcode.withgoogle.com/">Google Summer of Code (GSoC)</a>. I wrote a proposal for the <a href="https://martinos.org/mne/stable/index.html">MNE-Python</a> organization that stands on the umbrella of <a href="https://www.python.org/psf/">Python Software Foundation (PSF)</a>.</p>
-<p>The MNE-python project has a rich amount of tools needed to work with EEG and MEG data. On the other hand, many …</p>
-      <br>
-      <a class="btn" href="../first-post.html#first-post">    Continue reading
-</a>
-  </div>
+
+    	<br /><br />
+        <center><a target="_blank" href="http://openbci.com"><image src="../images/OpenBCI-Logo.png" height="150px" /></a></center>
+        <center><a target="_blank" href="http://openeeg.sourceforge.net/doc/"><image src="../images/OpenEEG-Logo.jpg" height="150px" /></a></center>
+        <center><a target="_blank" href="https://martinos.org/mne"><image src="../images/MNE-Logo.png" height="150px" /></a></center>
+        <center><a target="_blank" href="https://www.python.org/"><image src="../images/Python-Logo.png" height="150px" /></a></center>
+        <center><a target="_blank" href="http://scikit-learn.org"><image src="../images/Sciki-learn-Logo.png" height="150px" /></a></center>
+        <center><a target="_blank" href="https://www.arduino.cc/"><image src="../images/Arduino-Logo.png" height="150px" /></a></center>
+        <center><a target="_blank" href="https://www.raspberrypi.org/"><image src="../images/Raspberry-Logo.png" height="150px" /></a></center>
+      </div>
 </article>
-
-  <div class="pagination">
-  </div>
-
-
-
 
     <footer>
 <p>
@@ -136,7 +125,7 @@
   "@type" : "Blog",
   "name": " Hack the Brain ",
   "url" : "..",
-  "image": "https://avatars3.githubusercontent.com/u/5169959?v=3&u=30a93dde01ad3df9e78d652e49fb65e2e91e95ab&s=400",
+  "image": "https://s.gravatar.com/avatar/ea8469b609b36d7813aa4247757d1fac?s=140",
   "description": ""
 }
 </script>
