--- a/tags.html
+++ b/tags.html
@@ -53,6 +53,7 @@
       <nav>
         <ul class="list">
           <li><a href="./pages/about.html#about">About</a></li>
+          <li><a href="./pages/interests.html#interests">Interests</a></li>
 
         </ul>
       </nav>
@@ -74,6 +75,7 @@
 </a>
 
       <a href="/pages/about.html">ABOUT</a>
+      <a href="/pages/interests.html">INTERESTS</a>
 
 
     </nav>
@@ -84,7 +86,7 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="./tag/bci.html">BCI</a> (1)</li>
+    <ul class="list">          <li><a href="./tag/general.html">general</a> (1)</li>
     </ul>
   </div>
 </article>
